--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,16 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  background-image: url('4205986.jpg'); /* Replace with your image URL */
+  background-size: cover; /* Adjust background size as needed */
+  background-repeat: no-repeat;
+  background-attachment: fixed; /* Optional: makes the background fixed */
 }
 
 code {
